<resources>
    <string name="app_name">parttimeDuedateManagement</string>
    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="okMessage">확인</string>
    <string name="cancelMessage">취소</string>
    <string name="location">위치</string>
    <string name="name">이름</string>
    <string name="duedate">유통기한</string>
    <string name="add">추가</string>
    <string name="checkDuedate">유통기한 확인</string>
    <string name="checkSoldOut">품절 품목 확인</string>
    <string name="dataReset">데이터 초기화</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="inputName">이름을 입력해주세요</string>
    <string name="inputLocation">위치를 입력해주세요</string>
    <string name="inputDuedate">유통기한을 입력해주세요</string>
    <string name="insertTitle">아이템 추가</string>
    <string name="editType">카테고리 수정</string>
    <string name="explainTypeEditFragment">카테고리 수정</string>
    <string name="introBtnPlus">카테고리 추가</string>
    <string name="updateDialogTitle">아이템 수정</string>
    <string name="sortMessage">정 렬 : </string>
    <string-array name="sortingMenu">
        <item>아이템 추가 순</item>
        <item>유통기한순</item>
        <item>이름순</item>
    </string-array>
    <string name="countInventory">재고 파악</string>
    <string name="setting">설정</string>
    <string name="memo">메모장</string>
    <string name="inputTitle">제목을 입력해주세요</string>
    <string name="inputContent">내용을 입력해주세요</string>
    <string name="addMemo">메모 추가</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>